<resources>
    <string name="app_name">UACTIV</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_mylog">My Log</string>
    <string name="nav_item_trends">Trends</string>
    <string name="nav_item_alerts">Alerts</string>
    <string name="nav_item_profile">My Profile</string>
    <string name="nav_item_carprofile">Car Profile</string>
    <string name="nav_item_doc">Document</string>
    <string name="nav_item_help">Help</string>
    <string-array name="certs">
        <item>MIIEqDCCA5CgAwIBAgIJA071MA0GCSqGSIb3DQEBBAUAMIGUMQsww...</item>
    </string-array>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_mylog</item>
        <item>@string/nav_item_trends</item>
        <item>@string/nav_item_alerts</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_carprofile</item>
        <item>@string/nav_item_doc</item>
        <item>@string/nav_item_help</item>
    </string-array>
    <string name="title_trends">Trends</string>
    <string name="title_mylog">My Log</string>
    <string name="title_home">Home</string>
    <string name="Rs">\u20B9</string>
    <string name="engine">Engine Oil Change</string>
    <string name="air">Air Pressure Check</string>
    <string name="brake">Braked / Brake Lining Check</string>
    <string name="title">RangeBar</string>
    <string name="tickCount">tickCount = 7</string>
    <string name="tickHeight">tickHeight = 24</string>
    <string name="barWeight">barWeight = 2</string>
    <string name="barColor">barColor = #CCCCCC</string>
    <string name="connectingLineWeight">connectingLineWeight = 4</string>
    <string name="connectingLineColor">connectingLineColor = #33B5E5</string>
    <string name="thumbRadius">thumbRadius = N/A</string>
    <string name="thumbColorNormal">thumbColorNormal = N/A</string>
    <string name="thumbColorPressed">thumbColorPressed = N/A</string>
    <string name="confirmNewColor">New</string>
    <string name="confirmDefaultColor">Default</string>
    <string name="colorPickerTitle">Select a Color</string>
    <string name="resetThumbColors">Reset Thumb Colors</string>
    <string name="leftIndexValue">0</string>
    <string name="leftIndex">leftIndex</string>
    <string name="rightIndexValue">6</string>
    <string name="rightIndex">rightIndex</string>
    <string name="refresh">Refresh Indices</string>
    <string name="demo_min_label"></string>
    <string name="demo_max_label"></string>
    <string name="spinner_title">Select an Activity</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="challenge_text">Make your buddy up request competitive by challenging Prasheen. Game on!</string>
    <string name="challenge_on_text">Yes! it\'s on</string>
    <string name="profile_text">I\'m true lover of life, I play squash religiously.. Hit me up and we can have a game sometime. I\'m about Intermediate level..</string>
    <string name="pickup_gamedesc">We\'re meeting this friday to play some football join us , advanced players only. There is a green fee of Rs.400 </string>
    <string name="profile_details">yo. Hit me up to play squash, ping pong, or for a run. I\'m a Bombay / Toronto boy.</string>
    <string-array name="state_arrays">
        <item>Skateboarding</item>
        <item>Squash</item>
        <item>Swimming</item>
    </string-array>
    <string name="facebook_app_id">1578431575817771</string>
    <string name="user_alredy_exsit">User already exists,Please login with facebook</string>
    <string name="sentTokenToServer">sentTokenToServer</string>
    <string name="registrationComplete">registrationComplete</string>
    <string name="pickupnote_one">Things to consider - Responsiveness, Punctuality, Skill Level and Attitude. Your rating is anonymous.</string>
    <string name="pickupnote_two"><b>Note:</b> We may share your feedback with the host to help them improve</string>
    <string name="buddyupnote_one">Things to consider - Responsiveness, Punctuality, Skill Level and Attitude. Your rating is anonymous.</string>
    <string name="buddyupnote_two"><b>Note:</b> Comments will not be seen by your buddy</string>
    <string name="pickup_share_text">Check out this exciting Pick Up on UACTIV!</string>
    <string name="buddyup_share_text">Challenge accepted on UACTIV! May the better player win! Match.Set.Game</string>
    <string name="venue_note_two"><b>Note:</b> We may share your feedback with the host to help them improve</string>
    <string name="fav_removed">Favorite Removed</string>
    <string name="group_created_msg">" group created successfully!"</string>
    <string name="group_deleted_msg">Group deleted Successfully!</string>
    <string name="buddy_up_aband_msg">You have successfully left the Buddy Up!</string>
    <string name="pick_up_aband_msg">You have successfully left the Pick Up!</string>
    <string name="cancel_buddyup_msg">You have cancelled the Buddy Up!</string>
    <string name="pickup_cancelled_msg">You have cancelled the Pick Up!</string>
    <string name="msg_buddyup_accepted">Request Accepted!</string>
    <string name="msg_buddyup_declined">Declined!</string>
    <string name="msg_buddyup_request_pending">Request Pending!</string>
    <string name="msg_pickup_request_pending">Request Pending!</string>
    <string name="msg_buddyup_abanded">Abandoned!</string>
    <string name="msg_buddy_up_cancelled">Cancelled!</string>
    <string name="msg_pickup_request_accepted">Request Accepted!</string>
    <string name="msg_pickup_req_declined">Request Declined!</string>
    <string name="msg_pickup_abandoned">Abandoned!</string>
    <string name="msg_pickup_cancelled">Request Cancelled!</string>
    <string name="msg_pickup_request_cancelled">Request Cancelled!</string>
    <string name="msg_schedule_changed">Schedule has been changed!</string>
    <string name="msg_buddyup_request_expired">Expired!</string>
    <string name="msg_pickup_request_expired">Expired!</string>
    <string name="title_cancel_pickup">Cancel Pick Up</string>
    <string name="title_cancel_buddyup">Cancel Buddy Up</string>
    <string name="title_cancel_pickup_request">Cancel Pick Up Request</string>
    <string name="title_abandon_pickup">Abandon Pick Up</string>
    <string name="title_abandon_buddyup">Abandon Buddy Up</string>
    <string name="alert_message">Are you sure?,You want to %2$d.</string>
    <string name="msg_pickup_created">Pick Up Created</string>
    <string name="empty_msg_no_buddy_up_list">Opps! No results found, try searching for another person or another activity</string>
    <string name="empty_msg_no_pick_up_list">Damn! No results found, try searching for another activity or create your own Pick Up</string>
    <string name="empty_view_no_internet_connection">Woah! It\'s the 21st century and it seems like you don\'t have an active internet connection</string>
    <string name="msg_pickup_expired">Expired!</string>
    <string name="empty_view_msg_schedule">See your scheduled Buddy Up\'s and Pick Up\'s here</string>
    <string name="empty_view_msg_notifications">Don\'t be lazy! Buddy Up or Pick Up to see what happens here.</string>
    <string name="empty_view_msg_notifications_business_user">Don\'t be lazy! Pick Up to see what happens here.</string>
    <string name="empty_view_no_fav">See your favourite Buddy profiles here</string>
    <string name="empty_view_msg_no_groups">Create a group with your favourite Buddies</string>
    <string name="msg_report_user">User has been reported to UACTIV</string>
    <string name="msg_favourite_added">Added to Favourites!</string>
    <string name="msg_favourite_removed">Removed from Favourites!</string>
    <string name="msg_forgot_password">Password recovery link sent to mail</string>
    <string name="msg_email_id_already_exist">User already exists</string>
    <string name="msg_email_id_not_exist">UACTIV account does not exist.</string>
    <string name="msg_pick_up_completed">Completed!</string>
    <string name="meg_login_failed">Login failed</string>
    <string name="msg_buddy_up_completed">Buddy Up Completed</string>
    <string name="tutorial_buddy_up">Find and connect with peeps around you who share the same activity interest(s)</string>
    <string name="tutorial_buddy_up_business">See relevant profiles of people around your business </string>
    <string name="tutorial_pick_up">Join a group game,event or class around you. Pick ups shown by default are from your activity interest(s)</string>
    <string name="tutorial_pick_up_business">Find a group game,event or class around you. Pick ups shown by default are from your activity interest(s)</string>
    <string name="tutorial_got_it">GOT IT</string>
    <string name="tutorial_msg_create_pickup">Host your own group game,event or class</string>
    <string name="tutorial_msg_view_buddy_request">Connect and schedule an activity with your buddy</string>
    <string name="tutorial_msg_fav">Tap to add user to your favourites and easily connect with them later.</string>
    <string name="tutorial_msg_view_activity_details">View activity details</string>
    <string name="tutorils_msg_view_chat">View updates and chat once activity is confirmed</string>
    <string name="badge_msg_default_badge">Default badge</string>
    <string name="badge_info_contender">2 Buddy Up\'s or Pick Up\'s</string>
    <string name="badge_info_al_star">5 Buddy Up\'s or Pick Up\'s</string>
    <string name="badge_info_ace">9 Buddy Up\'s or Pick Up\'s</string>
    <string name="badge_info_champion">14 Buddy Up\'s or Pick Up\'s</string>
    <string name="badge_info_hercules">20 Buddy Up\'s or Pick Up\'s</string>
    <string name="badge_info_challenger">Complete 25 challenges</string>
    <string name="msg_onboarding_review">Rate your buddy and unlock cool rewards as you go.</string>
    <string name="msg_onboarding_find_people_nearby"><![CDATA[Find people nearby that are into the same sports & Activities.]]></string>
    <string name="msg_onboarding_buddy_up">Buddy up one to one, join a group activity.</string>
    <string name="msg_onboarding_chat">chat with your buddy or group.</string>
    <string name="dialog_msg_booking_info">Please pick a location from Suggested Locations in the Address field if you want to book a facility for this activity.</string>
    <string name="dialog_msg_confirm_booking">Would you like us to book this facility for you ? (Note: You will get a confirmation via email once your booking is confirmed)</string>
    <string name="dialog_booking_title">Book a Venue</string>
</resources>